--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
   --right-bg-color: rgba(43, 43, 43, 0.8);
   --left-btn-hover-color: rgba(87, 84, 236, 1);
   --right-btn-hover-color: rgba(28, 122, 28, 1);
+  --hover-width: 75%;
+  --other-width: 25%;
 }
 
 * {
@@ -101,6 +103,20 @@ h1 {
   background: url('https://images.unsplash.com/photo-1605640194512-2f7440046c2a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
   background-repeat: no-repeat;
   background-size: cover;
+}
 
+.hover-left .left {
+  width: var(--hover-width);
+}
 
+.hover-left .right {
+  width: var(--other-width);
+}
+
+.hover-right .right {
+  width: var(--hover-width);
+}
+
+.hover-right  .left {
+  width: var(--other-width);
 }
